syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "User/ProfileUpdate.proto";
import "Uuid.proto";

service ProfileCommand {
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
}

message ChangePasswordRequest {
  string new_password = 1;
  Uuid version = 2;
}

message ChangePasswordResponse {
  bool success = 1;
  Uuid new_version = 2;
  bool concurrently_updated = 3;
}

message UpdateProfileRequest {
  ProfileUpdate profile = 1;
}

message UpdateProfileResponse {
  bool success = 1;
  Uuid new_version = 2;
  bool concurrently_updated = 3;
}
